--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
-        django-version: ["4.2", "5.0", "main"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        django-version: ["4.2", "5.2", "main"]
+        exclude:
+          - python-version: "3.13"
+            django-version: "4.2"
+          - python-version: "3.10"
+            django-version: "main"
+          - python-version: "3.11"
+            django-version: "main"
     steps:
       - uses: actions/checkout@v4
 
